fix Order tab layout issue

--- a/packages/components/src/local/organisms/support-panel/styles.module.scss
+++ b/packages/components/src/local/organisms/support-panel/styles.module.scss
@@ -95,6 +95,7 @@
 
 .order-group {
   display: flex;
+  width: 100%;
   justify-content: flex-start;
   flex-direction: column;
   overflow: hidden;
